spade-tests/src/snapshots/spade_tests__typeinference__turbofish_on_method_works.snap
---
source: spade-tests/src/typeinference.rs
---
struct T {}
impl T {
    fn uwu<#uint W>(self) -> uint<W> {
        0
    }
}

fn test(t: T) {
    let x: uint<10> = t.uwu::<8>();
}


error: Expected type uint<10>, got uint<8>
  ┌─ testinput:9:23
  │
9 │     let x: uint<10> = t.uwu::<8>();
  │                 --    ^^^^^^^^^^^^
  │                 │     │       │
  │                 │     │       Type 8 inferred here
  │                 │     Expected uint<10>
  │                 Type 10 inferred here
  │
  = note: Expected: 10
                in: uint<10>
               Got: 8
                in: uint<8>
